// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/avatar/demo/badge.md correctly 1`] = `
<div>
  <span
    style="margin-right:24px"
  >
    <span
      class="ant-badge"
    >
      <span
        class="ant-avatar ant-avatar-square ant-avatar-icon"
      >
        <i
          aria-label="icon: user"
          class="anticon anticon-user"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#user"
            />
          </svg>
        </i>
      </span>
      <sup
        class="ant-scroll-number ant-badge-count"
        data-show="true"
        title="1"
      >
        <span
          class="ant-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1100%);-webkit-transform:translateY(-1100%);transform:translateY(-1100%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class="current"
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
  </span>
  <span>
    <span
      class="ant-badge"
    >
      <span
        class="ant-avatar ant-avatar-square ant-avatar-icon"
      >
        <i
          aria-label="icon: user"
          class="anticon anticon-user"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#user"
            />
          </svg>
        </i>
      </span>
      <sup
        class="ant-scroll-number ant-badge-dot"
        data-show="true"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/avatar/demo/basic.md correctly 1`] = `
<div>
  <div>
    <span
      class="ant-avatar ant-avatar-circle ant-avatar-icon"
      style="width:64px;height:64px;line-height:64px;font-size:32px"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-circle ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
  </div>
  <div>
    <span
      class="ant-avatar ant-avatar-square ant-avatar-icon"
      style="width:64px;height:64px;line-height:64px;font-size:32px"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-square ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-icon"
    >
      <i
        aria-label="icon: user"
        class="anticon anticon-user"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#user"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`renders ./components/avatar/demo/dynamic.md correctly 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-lg ant-avatar-circle"
    style="background-color:#f56a00;vertical-align:middle"
  >
    <span
      class="ant-avatar-string"
    >
      U
    </span>
  </span>
  <button
    class="ant-btn ant-btn-sm"
    style="margin-left:16px;vertical-align:middle"
    type="button"
  >
    <span>
      Change
    </span>
  </button>
</div>
`;

exports[`renders ./components/avatar/demo/type.md correctly 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-circle ant-avatar-icon"
  >
    <i
      aria-label="icon: user"
      class="anticon anticon-user"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#user"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-avatar ant-avatar-circle"
  >
    <span
      class="ant-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="ant-avatar ant-avatar-circle"
  >
    <span
      class="ant-avatar-string"
    >
      USER
    </span>
  </span>
  <span
    class="ant-avatar ant-avatar-circle ant-avatar-image"
  >
    <img
      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
    />
  </span>
  <span
    class="ant-avatar ant-avatar-circle"
    style="color:#f56a00;background-color:#fde3cf"
  >
    <span
      class="ant-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="ant-avatar ant-avatar-circle ant-avatar-icon"
    style="background-color:#87d068"
  >
    <i
      aria-label="icon: user"
      class="anticon anticon-user"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#user"
        />
      </svg>
    </i>
  </span>
</div>
`;
